; ModuleID = '/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-simulator.c_uri_access.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-simulator.c_uri_access.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32 }
%struct.cache_uri = type { i64, i32 }

@now = common dso_local global i32 0, align 4
@simulation_stats = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cache_uri*, i32)* @uri_access to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uri_access(%struct.cache_uri* %0, i32 %1) #0 {
  %3 = alloca %struct.cache_uri*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.cache_uri* %0, %struct.cache_uri** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.cache_uri*, %struct.cache_uri** %3, align 8
  %8 = icmp eq %struct.cache_uri* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  br label %49

10:                                               ; preds = %2
  %11 = load i32, i32* @now, align 4
  %12 = load %struct.cache_uri*, %struct.cache_uri** %3, align 8
  %13 = getelementptr inbounds %struct.cache_uri, %struct.cache_uri* %12, i32 0, i32 1
  store i32 %11, i32* %13, align 8
  %14 = load %struct.cache_uri*, %struct.cache_uri** %3, align 8
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @cache_incr(%struct.cache_uri* %14, i32 %15)
  %17 = load %struct.cache_uri*, %struct.cache_uri** %3, align 8
  %18 = getelementptr inbounds %struct.cache_uri, %struct.cache_uri* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %35

21:                                               ; preds = %10
  %22 = load %struct.cache_uri*, %struct.cache_uri** %3, align 8
  %23 = call i64 @cache_get_uri_size(%struct.cache_uri* %22, i32 1)
  store i64 %23, i64* %5, align 8
  %24 = load i32, i32* %4, align 4
  %25 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @simulation_stats, i32 0, i32 0), align 4
  %26 = add nsw i32 %25, %24
  store i32 %26, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @simulation_stats, i32 0, i32 0), align 4
  %27 = load i32, i32* %4, align 4
  %28 = sext i32 %27 to i64
  %29 = load i64, i64* %5, align 8
  %30 = mul nsw i64 %28, %29
  %31 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @simulation_stats, i32 0, i32 1), align 4
  %32 = sext i32 %31 to i64
  %33 = add nsw i64 %32, %30
  %34 = trunc i64 %33 to i32
  store i32 %34, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @simulation_stats, i32 0, i32 1), align 4
  br label %49

35:                                               ; preds = %10
  %36 = load %struct.cache_uri*, %struct.cache_uri** %3, align 8
  %37 = call i64 @cache_get_uri_size(%struct.cache_uri* %36, i32 0)
  store i64 %37, i64* %6, align 8
  %38 = load i32, i32* %4, align 4
  %39 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @simulation_stats, i32 0, i32 2), align 4
  %40 = add nsw i32 %39, %38
  store i32 %40, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @simulation_stats, i32 0, i32 2), align 4
  %41 = load i32, i32* %4, align 4
  %42 = sext i32 %41 to i64
  %43 = load i64, i64* %6, align 8
  %44 = mul nsw i64 %42, %43
  %45 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @simulation_stats, i32 0, i32 3), align 4
  %46 = sext i32 %45 to i64
  %47 = add nsw i64 %46, %44
  %48 = trunc i64 %47 to i32
  store i32 %48, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @simulation_stats, i32 0, i32 3), align 4
  br label %49

49:                                               ; preds = %9, %35, %21
  ret void
}

declare dso_local i32 @cache_incr(%struct.cache_uri*, i32) #1

declare dso_local i64 @cache_get_uri_size(%struct.cache_uri*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
